--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@
   font-style:italic;
   text-align: center;
   font-family: Times;
+  height:17%;
   font-size: 25px;
   border-radius: 10px;
   display: inline-block;
