--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@
   color:black;
   font-style:italic;
   text-align: center;
+  text-decoration: none;
   font-family: Times;
   font-size: 25px;
   height:20%;
@@ -64,7 +65,7 @@
 }
 
 #linkedin {
-  height:65px;
+  height:63px;
   width: 65px;
   padding-bottom: 17px;
 }
@@ -95,13 +96,19 @@ h1 {
   font-size: 15px;
 }
 
+.projectlink {
+  text-align: center;
+  font-size: 13px;
+  margin-top: -7px;
+  text-decoration: underline;
+}
+
 h2 {
   text-align: center;
 }
 
 a {
   color:black;
-  text-decoration: none;
 }
 
 a:hover {
@@ -141,8 +148,8 @@ ol {
   margin-left:75px;
 }
 
-h2 {
-  color:lightblue;
+#resumetop {
+  color: lightblue;
 }
 
 #break {
